src/test/deca/context/invalid/resultats/test_divide_class-cont.res
./src/test/deca/context/invalid/test_divide_class.deca:23:5: The types are incompatible for a Arithmetic Operation
